--- a/pages/Sinopsis.html
+++ b/pages/Sinopsis.html
@@ -5,17 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Recomendaciones de libros con temática LGBTQI+">
-    <meta name="keywords" content="literatura lgbt juvenil, best gay books">
+    <meta name="keywords" content="literatura lgbt juvenil, best gay books, litaruta juvenil, libros lgbt, libros gays, libros con temática lgbt">
     <meta name="author" content="Carla Castellano">
     <meta name="copyright" content="books-about-us">
     <meta property="og: title" content="Libros LGBTIQ+">
     <meta property="og:description" content="Recomendaciones de libros con temática LGBTIQ+">
     <meta property="og image" content="">
     <meta property="og url" content="">
-    <title>Inglés | Books About Us</title>
+    <title>Descripciones | Books About Us</title>
     <link rel="shortcut icon" href="../assets/imagenes/BAU.png" type="image/x-icon">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
     <link rel="stylesheet" href="../css/style.css">
+
 </head>
 <body>
     <header>
@@ -30,42 +31,41 @@
                     <li><a href="../pages/lesbianas.html">Lesbianas</a></li>
                     <li><a href="../pages/gays.html">Gays</a></li>
                     <li><a href="../pages/trans.html">Trans</a></li>
-                    <li><a href="#">Inglés</a></li>
-                    <li><a href="./descripciones.html">Descripciones</a></li>
+                    <li><a href="../pages/ingles.html">Inglés</a></li>
+                    <li><a href="#">Descripciones</a></li>
                     </ul>
                 </div>
             </nav>
         </div>
     </header>
-    <main class="grid-main-p">
+    <main class="grid-main">
         <div class="rainbow"></div>
-        <section class="banner-ingles titulo">
-            <div>
+        <section class="sec-1">
+            <div class="bg-h1">
                 <h1>Books About Us</h1>
-                <p>The things that scare you the most are the things that bring you closer to who you’re meant to be.”</p>
-                <p>James Brandon, Ziggy, Stardust and Me</p>
             </div>
         </section>
         <section class="subtitulo">
             <div>
-                <h2>En Inglés</h2>
+                <h2>Chica ama a chica</h2>
             </div>
         </section>
-        <section class="tapas">
-            <div class="card">
-                <img class="cover" src="../assets/imagenes/book-covers/melt-with-you.jpg" alt="Melt with you, tapa de libro.">
-                <h3>MELT WITH YOU - JENNIFER DUGAN</h3>
-                <p>Fallon and Chloe used to be best friends, but last summer they hooked up right before Chloe left for college, and after a series of misunderstandings they are now not speaking to one another. A year later, Chloe is back home from school, and Fallon is doing everything in her power to avoid her--which is especially difficult because their moms own a business together, a gourmet ice cream truck where both girls work. When their moms have the opportunity to make a presentation to some venture capitalists in Texas--something that could seriously expand their business and solve all their money problems to boot--it's up to Fallon to work a series of food truck festivals across the country. But she can't do it alone, and Chloe is the only one available to help. As tensions heat up again between the two, will Fallon be able to keep her cool?</p>
+        <section class="card-sinopsis-1">
+            <div>
+                <h5>Titulo - autor</h5>
+                <p>Turns out, New York City is kind of a nightmare for a witch. Hannah’s not exactly loving her trip to the city, considering the huge crowds and layers of concrete blocking her connection to the elements. But a weekend away with her best friend, Gemma, and her girlfriend, Veronica, still has its advantages. After all, it’s hard to complain when you’re making out with the Statue of Liberty in the background. With Veronica’s graduation on the horizon, Hannah is determined to enjoy every second of their time together, even if that means hanging out with Veronica’s new friends, a group of Caster Witches determined to stir up trouble with a local Blood Witch. Thrust into the middle of a terrifying magical feud, Hannah begins to question if she can really trust Veronica, especially with her heart. And with a vengeful Blood Witch on their trail, she’ll have to use every ounce of her powers to make sure she gets back to Salem alive.</p>
             </div>
-            <div class="card">
-                <img class="cover" src="../assets/imagenes/book-covers/the-falling-in-love-montage.jpg" alt="The falling in love montage, tapa de libro">
-                <h3>THE FALLING IN LOVE MONTAGE - CIARA SMYTH</h3>
-                <p>Seventeen-year-old cynic Saoirse Clarke isn't looking for a relationship. But when she meets mischievous Ruby, that rule goes right out the window. Sort of. Because Ruby has a loophole in mind: a summer of all the best cliché movie montage dates, with a definite ending come fall—no broken hearts, no messy breakup. It would be the perfect plan, if they weren’t forgetting one thing about the Falling in Love Montage: when it's over, the characters have fallen in love...for real. Ciara Smyth's debut is a delightful, multilayered YA rom-com that will make you laugh, cry, and absolutely fall in love.</p>
+            <div>
+                <a href="./lesbianas.html"><img class="cover-sinopsis" src="../assets/imagenes/book-covers/this-spell-cant-last.jpg" alt=""></a>
             </div>
-            <div class="card">
-                <img class="cover" src="../assets/imagenes/book-covers/accidental-love.png" alt="Accidental love, tapa de libro.">
-                <h3>ACIDENTAL LOVE - BL MILLER</h3>
-                <p>Accidental Love is a captivating story between Rose Grayson, a destitute lonely young woman and Veronica Cartwright, head of a vast family empire and extraordinarily rich. A horrific accident brings them together, but will the truth end up tearing them apart?</p>
+        </section>
+        <section class="card-sinopsis-2">
+            <div>
+                <h5>Titulo - autor</h5>
+                <p>Turns out, New York City is kind of a nightmare for a witch. Hannah’s not exactly loving her trip to the city, considering the huge crowds and layers of concrete blocking her connection to the elements. But a weekend away with her best friend, Gemma, and her girlfriend, Veronica, still has its advantages. After all, it’s hard to complain when you’re making out with the Statue of Liberty in the background. With Veronica’s graduation on the horizon, Hannah is determined to enjoy every second of their time together, even if that means hanging out with Veronica’s new friends, a group of Caster Witches determined to stir up trouble with a local Blood Witch. Thrust into the middle of a terrifying magical feud, Hannah begins to question if she can really trust Veronica, especially with her heart. And with a vengeful Blood Witch on their trail, she’ll have to use every ounce of her powers to make sure she gets back to Salem alive.</p>
+            </div>
+            <div>
+                <a href="./lesbianas.html"><img class="cover-sinopsis" src="../assets/imagenes/book-covers/this-spell-cant-last.jpg" alt=""></a>
             </div>
         </section>
     </main>
