--- a/index.html
+++ b/index.html
@@ -14,30 +14,32 @@
     <meta property="og url" content="">
     <title>Books About Us</title>
     <link rel="shortcut icon" href="./assets/imagenes/BAU.png" type="image/x-icon">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <header>
-        <div class="grid">
-            <div class="logo">
-                <a href="./index.html"><img class="logo"  src="./assets/imagenes/BAU.png" alt="Logo de la página"></a>
-            </div>
-            <nav class="nav">
+        <nav>
+            <a href="#"> <img class="logo" src="./assets/imagenes/BAU.png" alt="Logo de la página"></a>
+            <input type="checkbox" name="" id="toggle">
+            <label for="toggle"><i class="material-icons">menu</i></label>
+            <div class="menu">
                 <ul>
-                    <li><a href="#"><img src="./assets/imagenes/iconos/hogar.png"></a></li>
-                    <li><a href="./pages/lesbianas.html"><img src="./assets/imagenes/iconos/woman.png"></a></li>
-                    <li><a href="./pages/gays.html"><img src="./assets/imagenes/iconos/gay.png"></a></li>
-                    <li><a href="./pages/trans.html"><img src="./assets/imagenes/iconos/transgender.png"></a></li>
-                    <li><a href="./pages/ingles.html"><img src="./assets/imagenes/iconos/ingles.png"></a></li>
-                    <li><a href="./pages/contacto.html"><img src="./assets/imagenes/iconos/sobre.png"></a></li>
+                <li><a href="#">Inicio</a></li>
+                <li><a href="./pages/lesbianas.html">Lesbianas</a></li>
+                <li><a href="./pages/gays.html">Gays</a></li>
+                <li><a href="./pages/trans.html">Trans</a></li>
+                <li><a href="./pages/ingles.html">Inglés</a></li>
+                <li><a href="./pages/sinopsis.html">Sinopsis</a></li>
                 </ul>
-            </nav>
-        </div>
+            </div>
+        </nav>
+    </div>
     </header>
-    <main class="grid-main">
+    <main>
         <div class="rainbow"></div>
         <section class="sec-1">
-            <div class="bg-h1">
+            <div class="banner-index">
                 <h1>Books About Us</h1>
             </div>
         </section>
@@ -48,9 +50,39 @@
         <div>
             <h3>Tenemos diferentes categorías pensadas para vos</h3>
         </div>
-        <section class="sec-3 carrousel">
-            <h4>CHICAS QUE AMAN A CHICAS</h4>
-            <a href="./pages/lesbianas.html">
+        <div class="container">
+            <section class="carrousel">
+                <div>
+                    <h4>CHICAS QUE AMAN A CHICAS</h4>
+                    <a href="./pages/lesbianas.html">
+                        <img class="cover" src="./assets/imagenes/book-covers/10-dia-para-G.png" alt="10 días para G - Portada de libro">
+                        <img class="cover" src="./assets/imagenes/book-covers/accidental-love.png" alt="Accidental love - Portada de libro">
+                        <img class="cover" src="./assets/imagenes/book-covers/algo-mas-que-un-contrato.jpg" alt="Algo más que un contrato - Portada de libro">
+                        <img class="cover" src="./assets/imagenes/book-covers/algo-salvaje.png" alt="Algo salvaje - Portada de libro">
+                        <img class="cover" src="./assets/imagenes/book-covers/cafe-sonata.png" alt="Café Sonata - Portada de libro">
+                        <img class="cover" src="./assets/imagenes/book-covers/carol.png" alt="Carol - Portada de libro">
+                        <img class="cover" src="./assets/imagenes/book-covers/coven.jpg" alt="Coven - Portada de libro">
+                        <img class="cover" src="./assets/imagenes/book-covers/me-sobran-los-romeos.jpg" alt="Me sobran los Romeos - Portada de libro">
+                        <img class="cover" src="./assets/imagenes/book-covers/hasta-que-una-firma-nos-separe.jpg" alt="Hasta que una firma nos separe - Portada de libro">
+                    </a>
+                </div>
+            </section>
+            <section class="sec-4 carrousel">
+                <h4>CHICO CONOCE A CHICO</h4>
+                <a href="./pages/gays.html">
+                    <img class="cover" src="./assets/imagenes/book-covers/10-dia-para-G.png" alt="10 días para G - Portada de libro">
+                    <img class="cover" src="./assets/imagenes/book-covers/accidental-love.png" alt="Accidental love - Portada de libro">
+                    <img class="cover" src="./assets/imagenes/book-covers/algo-mas-que-un-contrato.jpg" alt="Algo más que un contrato - Portada de libro">
+                    <img class="cover" src="./assets/imagenes/book-covers/algo-salvaje.png" alt="Algo salvaje - Portada de libro">
+                    <img class="cover" src="./assets/imagenes/book-covers/cafe-sonata.png" alt="Café Sonata - Portada de libro">
+                    <img class="cover" src="./assets/imagenes/book-covers/carol.png" alt="Carol - Portada de libro">
+                    <img class="cover" src="./assets/imagenes/book-covers/coven.jpg" alt="Coven - Portada de libro">
+                    <img class="cover" src="./assets/imagenes/book-covers/me-sobran-los-romeos.jpg" alt="Me sobran los Romeos - Portada de libro">
+                </a>
+            </section>
+            <section class="sec-5 carrousel">
+                <h4>NO TODO ES BLANCO O NEGRO</h4>
+                <a href="./pages/trans.html">
                 <img class="cover" src="./assets/imagenes/book-covers/10-dia-para-G.png" alt="10 días para G - Portada de libro">
                 <img class="cover" src="./assets/imagenes/book-covers/accidental-love.png" alt="Accidental love - Portada de libro">
                 <img class="cover" src="./assets/imagenes/book-covers/algo-mas-que-un-contrato.jpg" alt="Algo más que un contrato - Portada de libro">
@@ -59,12 +91,11 @@
                 <img class="cover" src="./assets/imagenes/book-covers/carol.png" alt="Carol - Portada de libro">
                 <img class="cover" src="./assets/imagenes/book-covers/coven.jpg" alt="Coven - Portada de libro">
                 <img class="cover" src="./assets/imagenes/book-covers/me-sobran-los-romeos.jpg" alt="Me sobran los Romeos - Portada de libro">
-                <img class="cover" src="./assets/imagenes/book-covers/hasta-que-una-firma-nos-separe.jpg" alt="Hasta que una firma nos separe - Portada de libro">
-            </a>
-        </section>
-        <section class="sec-4 carrousel">
-            <h4>CHICO CONOCE A CHICO</h4>
-            <a href="./pages/gays.html">
+                </a>
+            </section>
+            <section class="sec-6 carrousel">
+                <h4>EN EL IDIOMA ORIGINAL</h4>
+                <a href="./pages/ingles.html">
                 <img class="cover" src="./assets/imagenes/book-covers/10-dia-para-G.png" alt="10 días para G - Portada de libro">
                 <img class="cover" src="./assets/imagenes/book-covers/accidental-love.png" alt="Accidental love - Portada de libro">
                 <img class="cover" src="./assets/imagenes/book-covers/algo-mas-que-un-contrato.jpg" alt="Algo más que un contrato - Portada de libro">
@@ -73,34 +104,9 @@
                 <img class="cover" src="./assets/imagenes/book-covers/carol.png" alt="Carol - Portada de libro">
                 <img class="cover" src="./assets/imagenes/book-covers/coven.jpg" alt="Coven - Portada de libro">
                 <img class="cover" src="./assets/imagenes/book-covers/me-sobran-los-romeos.jpg" alt="Me sobran los Romeos - Portada de libro">
-            </a>
-        </section>
-        <section class="sec-5 carrousel">
-            <h4>NO TODO ES BLANCO O NEGRO</h4>
-            <a href="./pages/trans.html">
-            <img class="cover" src="./assets/imagenes/book-covers/10-dia-para-G.png" alt="10 días para G - Portada de libro">
-            <img class="cover" src="./assets/imagenes/book-covers/accidental-love.png" alt="Accidental love - Portada de libro">
-            <img class="cover" src="./assets/imagenes/book-covers/algo-mas-que-un-contrato.jpg" alt="Algo más que un contrato - Portada de libro">
-            <img class="cover" src="./assets/imagenes/book-covers/algo-salvaje.png" alt="Algo salvaje - Portada de libro">
-            <img class="cover" src="./assets/imagenes/book-covers/cafe-sonata.png" alt="Café Sonata - Portada de libro">
-            <img class="cover" src="./assets/imagenes/book-covers/carol.png" alt="Carol - Portada de libro">
-            <img class="cover" src="./assets/imagenes/book-covers/coven.jpg" alt="Coven - Portada de libro">
-            <img class="cover" src="./assets/imagenes/book-covers/me-sobran-los-romeos.jpg" alt="Me sobran los Romeos - Portada de libro">
-            </a>
-        </section>
-        <section class="sec-6 carrousel">
-            <h4>EN EL IDIOMA ORIGINAL</h4>
-            <a href="./pages/ingles.html">
-            <img class="cover" src="./assets/imagenes/book-covers/10-dia-para-G.png" alt="10 días para G - Portada de libro">
-            <img class="cover" src="./assets/imagenes/book-covers/accidental-love.png" alt="Accidental love - Portada de libro">
-            <img class="cover" src="./assets/imagenes/book-covers/algo-mas-que-un-contrato.jpg" alt="Algo más que un contrato - Portada de libro">
-            <img class="cover" src="./assets/imagenes/book-covers/algo-salvaje.png" alt="Algo salvaje - Portada de libro">
-            <img class="cover" src="./assets/imagenes/book-covers/cafe-sonata.png" alt="Café Sonata - Portada de libro">
-            <img class="cover" src="./assets/imagenes/book-covers/carol.png" alt="Carol - Portada de libro">
-            <img class="cover" src="./assets/imagenes/book-covers/coven.jpg" alt="Coven - Portada de libro">
-            <img class="cover" src="./assets/imagenes/book-covers/me-sobran-los-romeos.jpg" alt="Me sobran los Romeos - Portada de libro">
-            </a>
-        </section>
+                </a>
+            </section>
+        </div>
     </main>
     <footer class="grid-footer">
         <div class="fot-1">
@@ -112,7 +118,7 @@
                 <li><a href="./pages/gays.html">Gays</a></li>
                 <li><a href="./pages/trans.html">Trans</a></li>
                 <li><a href="./pages/ingles.html">Inglés</a></li>
-                <li><a href="../pages/contacto.html">Contacto</a></li>
+                <li><a href="./pages/descripciones.html">Contacto</a></li>
         </div>
         <div class="card-f fot-3">
             <span>Seguinos</span>
