--- a/pages/trans.html
+++ b/pages/trans.html
@@ -14,31 +14,34 @@
     <meta property="og url" content="">
     <title>Trans | Books About Us</title>
     <link rel="shortcut icon" href="../assets/imagenes/BAU.png" type="image/x-icon">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <header>
-        <div class="grid">
-            <div>
-                <a href="../index.html"> <img class="logo" src="../assets/imagenes/BAU.png" alt="Logo de la página"></a>
-            </div>
-            <nav class="nav">
+        <nav>
+            <a href="../index.html"> <img class="logo" src="../assets/imagenes/BAU.png" alt="Logo de la página"></a>
+            <input type="checkbox" name="" id="toggle">
+            <label for="toggle"><i class="material-icons">menu</i></label>
+            <div class="menu">
                 <ul>
-                    <li><a href="../index.html"><img src="../assets/imagenes/iconos/hogar.png" alt="Inicio"></a></li>
-                    <li><a href="../pages/lesbianas.html"><img src="../assets/imagenes/iconos/woman.png" alt="Lesbianas"></a></li>
-                    <li><a href="../pages/gays.html"><img src="../assets/imagenes/iconos/gay.png" alt="Gays"></a></li>
-                    <li><a href="#"><img src="../assets/imagenes/iconos/transgender.png" alt="Trans"></a></li>
-                    <li><a href="../pages/ingles.html"><img src="../assets/imagenes/iconos/ingles.png" alt="Ingles"></a></li>
-                    <li><a href="../pages/contacto.html"><img src="../assets/imagenes/iconos/sobre.png"></a></li>
+                <li><a href="../index.html">Inicio</a></li>
+                <li><a href="../pages/lesbianas.html">Lesbianas</a></li>
+                <li><a href="../pages/gays.html">Gays</a></li>
+                <li><a href="#">Trans</a></li>
+                <li><a href="../pages/ingles.html">Inglés</a></li>
+                <li><a href="../pages/sinopsis.html">Sinopsis</a></li>
                 </ul>
-            </nav>
-        </div>
+            </div>
+        </nav>
+    </div>
     </header>
     <main class="grid-main-p">
         <div class="rainbow"></div>
-        <section class="titulo">
+        <section class="banner-trans titulo">
             <div>
                 <h1>Books About Us</h1>
+                <p>"La apariencia física es efímera, la esencia de cada persona es eterna."</p>
             </div>
         </section>
         <section class="subtitulo">
@@ -46,7 +49,15 @@
                 <h2>Para Elles</h2>
             </div>
         </section>
-        <section class="tapas">
+        <section class="card-container">
+            <div class="card">
+                <img src="../assets/imagenes/book-covers/mi-hermano-se-llama-jessica.png">
+                <div class="card-content">
+                    <h5>10 días para G - Cristina Vigo</h5>
+                    <a href="../index.html" target="_blank">Ver más...</a>
+                </div>
+            </div>
+        <!-- <section class="tapas">
             <div class="card">
                 <img class="cover" src="../assets/imagenes/book-covers/transitamos.jpg" alt="Transitamos, tapa de libro.">
                 <h3>TRANSITAMOS - IAN BERMÚDEZ RAVENTÓS; LUCÍA DE PALAU</h3>
@@ -62,7 +73,7 @@
                 <h3>STAY GOLD - TOBLY MCSMITH</h3>
                 <p>PONY solo quiere pasar desapercibido durante el último año de instituto. Cansado del interés que suscitaba después de declararse transgénero, espera un nuevo comienzo en Hillcrest High. GEORGIA empieza a sospechar que hay vida más allá de las animadoras y los chicos del equipo...</p>
             </div>
-        </section>
+        </section> -->
     </main>
     <footer class="grid-footer">
         <div class="fot-1">
