--- a/index.html
+++ b/index.html
@@ -38,36 +38,36 @@
     </header>
     <main>
         <div class="rainbow"></div>
-        <section class="sec-1">
+        <section>
             <div class="banner-index">
                 <h1>Books About Us</h1>
             </div>
         </section>
-        <section class="sec-2">
+        <section>
             <h2>Que la literatura tiene un poder incalculable para empoderar y concientiziar a la sociedad sobre la diversidad del mundo es incuestionable. Los libros nos ayudan a visibilizarnos, nos dan voz, sirven de plataforma para dar a conocer nuestras historias. También nos hacen pensar, y nos educan, en cierto modo, sobre temas y aspectos que nunca nos habíamos planteado.
                 En esta web queremos recomendarte la mejor selección de libros con temática LGBTIQ+. Vas a encontrar novelas y libros de ficción donde los personajes tienen diversas orientaciones sexuales y una mirada diferente que, por fin, toma su protagonismo.</h2>
         </section>
         <div>
             <h3>Tenemos diferentes categorías pensadas para vos</h3>
         </div>
-        <div class="container">
-            <section class="carrousel">
-                <div>
-                    <h4>CHICAS QUE AMAN A CHICAS</h4>
-                    <a href="./pages/lesbianas.html">
-                        <img class="cover" src="./assets/imagenes/book-covers/10-dia-para-G.png" alt="10 días para G - Portada de libro">
-                        <img class="cover" src="./assets/imagenes/book-covers/accidental-love.png" alt="Accidental love - Portada de libro">
-                        <img class="cover" src="./assets/imagenes/book-covers/algo-mas-que-un-contrato.jpg" alt="Algo más que un contrato - Portada de libro">
-                        <img class="cover" src="./assets/imagenes/book-covers/algo-salvaje.png" alt="Algo salvaje - Portada de libro">
-                        <img class="cover" src="./assets/imagenes/book-covers/cafe-sonata.png" alt="Café Sonata - Portada de libro">
-                        <img class="cover" src="./assets/imagenes/book-covers/carol.png" alt="Carol - Portada de libro">
-                        <img class="cover" src="./assets/imagenes/book-covers/coven.jpg" alt="Coven - Portada de libro">
-                        <img class="cover" src="./assets/imagenes/book-covers/me-sobran-los-romeos.jpg" alt="Me sobran los Romeos - Portada de libro">
-                        <img class="cover" src="./assets/imagenes/book-covers/hasta-que-una-firma-nos-separe.jpg" alt="Hasta que una firma nos separe - Portada de libro">
+        <section class="carrousel">
+            <div class="container">
+                <h4>CHICAS QUE AMAN A CHICAS</h4>
+                <a href="./pages/lesbianas.html">
+                    <img class="cover" src="./assets/imagenes/book-covers/10-dia-para-G.png" alt="10 días para G - Portada de libro">
+                    <img class="cover" src="./assets/imagenes/book-covers/accidental-love.png" alt="Accidental love - Portada de libro">
+                    <img class="cover" src="./assets/imagenes/book-covers/algo-mas-que-un-contrato.jpg" alt="Algo más que un contrato - Portada de libro">
+                    <img class="cover" src="./assets/imagenes/book-covers/algo-salvaje.png" alt="Algo salvaje - Portada de libro">
+                    <img class="cover" src="./assets/imagenes/book-covers/cafe-sonata.png" alt="Café Sonata - Portada de libro">
+                    <img class="cover" src="./assets/imagenes/book-covers/carol.png" alt="Carol - Portada de libro">
+                    <img class="cover" src="./assets/imagenes/book-covers/coven.jpg" alt="Coven - Portada de libro">
+                    <img class="cover" src="./assets/imagenes/book-covers/me-sobran-los-romeos.jpg" alt="Me sobran los Romeos - Portada de libro">
+                    <img class="cover" src="./assets/imagenes/book-covers/hasta-que-una-firma-nos-separe.jpg" alt="Hasta que una firma nos separe - Portada de libro">
                     </a>
                 </div>
-            </section>
-            <section class="sec-4 carrousel">
+        </section>
+        <section class="carrousel">
+            <div class="container">
                 <h4>CHICO CONOCE A CHICO</h4>
                 <a href="./pages/gays.html">
                     <img class="cover" src="./assets/imagenes/book-covers/10-dia-para-G.png" alt="10 días para G - Portada de libro">
@@ -79,8 +79,10 @@
                     <img class="cover" src="./assets/imagenes/book-covers/coven.jpg" alt="Coven - Portada de libro">
                     <img class="cover" src="./assets/imagenes/book-covers/me-sobran-los-romeos.jpg" alt="Me sobran los Romeos - Portada de libro">
                 </a>
-            </section>
-            <section class="sec-5 carrousel">
+            </div>
+        </section>
+        <section class="carrousel">
+            <div class="container">
                 <h4>NO TODO ES BLANCO O NEGRO</h4>
                 <a href="./pages/trans.html">
                 <img class="cover" src="./assets/imagenes/book-covers/10-dia-para-G.png" alt="10 días para G - Portada de libro">
@@ -92,8 +94,10 @@
                 <img class="cover" src="./assets/imagenes/book-covers/coven.jpg" alt="Coven - Portada de libro">
                 <img class="cover" src="./assets/imagenes/book-covers/me-sobran-los-romeos.jpg" alt="Me sobran los Romeos - Portada de libro">
                 </a>
-            </section>
-            <section class="sec-6 carrousel">
+            </div>
+        </section>
+        <section class="carrousel">
+            <div class="container">
                 <h4>EN EL IDIOMA ORIGINAL</h4>
                 <a href="./pages/ingles.html">
                 <img class="cover" src="./assets/imagenes/book-covers/10-dia-para-G.png" alt="10 días para G - Portada de libro">
@@ -105,14 +109,14 @@
                 <img class="cover" src="./assets/imagenes/book-covers/coven.jpg" alt="Coven - Portada de libro">
                 <img class="cover" src="./assets/imagenes/book-covers/me-sobran-los-romeos.jpg" alt="Me sobran los Romeos - Portada de libro">
                 </a>
-            </section>
-        </div>
+            </div>
+        </section>
     </main>
     <footer class="grid-footer">
         <div class="fot-1">
             <a href="./index.html"><img class="logo" src="./assets/imagenes/BAU.png" alt="Logo de la página"></a>
         </div>
-        <div class="card-l fot-2">
+        <div class="list-footer fot-2">
             <ul>
                 <li><a href="./pages/lesbianas.html">Lesbianas</a></li>
                 <li><a href="./pages/gays.html">Gays</a></li>
@@ -120,7 +124,7 @@
                 <li><a href="./pages/ingles.html">Inglés</a></li>
                 <li><a href="./pages/descripciones.html">Contacto</a></li>
         </div>
-        <div class="card-f fot-3">
+        <div class="social fot-3">
             <span>Seguinos</span>
             <a class="social-link" href="https://wa.me/qr/LCVV323CI6ZTB1" target="_blank"><img class="icon" src="./assets/imagenes/iconos/whatsapp-logo.png" alt="Logo de whatsapp">
             </a>
